# chopsticks

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DOCUMENTATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SCENARIO_PROPOSALS.md  justfile  pyproject.toml  pytest.ini
.github/workflows/: README.md  ci.yml  docs-build.yml  docs-publish.yml  docs-status.yml  functional-tests.yml  lint.yml  test.yml
charm/src/: charm.py
config/: s3_config.yaml.example  s3_config_with_metrics.yaml  s3_mixed_workload.yaml  s3_small_objects.yaml
config/scenarios/: concurrent_access.yaml  mixed_workload.yaml  s3_read_overload.yaml  small_objects.yaml
docs/: .gitignore  README.md  conf.py  requirements.txt
docs/.sphinx/: get_vale_conf.py
docs/explanation/: architecture.rst  error-handling.rst
docs/how-to/: customize-driver.rst  distributed-testing.rst
docs/reference/: configuration.rst  driver-api.rst  metrics-schema.rst  workload-api.rst
docs/tutorial/: first-test.rst  installation.rst
scripts/: install_s5cmd.sh
snap/: README.md  snapcraft.yaml
src/chopsticks/: cli.py
src/chopsticks/commands/: metrics.py  run.py
src/chopsticks/config/: config_loader.py
src/chopsticks/metrics/: __init__.py  collector.py  daemon.py  (+5 more)
tests/: __init__.py  conftest.py  test_license.py
tests/integration/: __init__.py  test_daemon_cleanup.py  test_error_reporting.py  test_metrics_ipc.py
tests/scenarios/: test_download_error_handling.py  test_s3_read_overload.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_error_handling.py  test_metrics.py
(+21 files in other folders)
